[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyventim"
version = "0.1.0"
authors = [
  { name="Kilian Braun", email="hello@kilianbraun.de" },
]
maintainers = [
  { name="Kilian Braun", email="hello@kilianbraun.de" },
]

description = "Python wrapper to fetch a reverse engineered Eventim API."
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}


[project.urls]
Homepage = "https://github.com/kggx/pyventim"
Issues = "https://github.com/kggx/pyventim/issues"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [ "--import-mode=importlib" ]
filterwarnings = "ignore:.*:DeprecationWarning"
pythonpath = "src"
testpaths = [
    "tests"
]

[tool.pylint.MASTER]
ignore = ['.git', "tests"]
